--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="shortcut icon" type="image/x-icon" href="./favicon.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="./public/favicon.png" />
   <title>Facebook</title>
 </head>
 
 <body>
   <div id="root"></div>
-  <script src="./bundle.js"></script>
+  <script src="./public/bundle.js"></script>
 </body>
 
 </html>
